<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="match_parent"
	android:background="@color/menu_background"
	android:fillViewport="true"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<android.support.design.widget.NavigationView
			android:id="@+id/navigation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@color/menu_background"
			app:headerLayout="@layout/navigation_header"
			app:itemIconTint="@color/briar_text_primary"
			app:itemTextColor="@color/briar_text_primary"
			app:menu="@menu/navigation_drawer">

			<ImageButton
				android:id="@+id/imageButton1"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:layout_gravity="right"
				android:background="@drawable/round_button"
				android:scaleType="fitXY"
				app:srcCompat="@android:drawable/ic_menu_gallery" />
		</android.support.design.widget.NavigationView>

		<include
			layout="@layout/transports_list"
			android:id="@+id/connectivity"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			/>

	</LinearLayout>

</ScrollView>
